[package]
name = "ohash"
license = "MIT"
description = "A simple media hasher based on code from the opensubtitles.org forum"
version = "0.1.0"
edition = "2021"
keywords = ["ohash", "media-hash", "hasher"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
